# Pyxify

./: README.md  main.py  pyproject.toml  requirment.txt
imagera/: convert.py  crop.py  enhance.py  flip.py  metadata.py  validate.py
src/imagera/: __init__.py  convert.py  crop.py  enhance.py  flip.py  metadata.py
src/pyxify/: convert.py  crop.py  enhance.py  flip.py  metadata.py
tests/: test_cases.py
